Date	Added

2006/08/18
	* Added guild_aura (skill.conf) setting so you can specify when it works
	  and if it works on the guild-master itself. Defaults to working all the
	  time on everyone except GM. [Skotlex]
2006/08/14
	* Removed support for negative autosave intervals, instead added a
	  minsave_interval setting which specifies which is the minimum time between
	  character saves. Default to 100ms (map_athena.conf). [Skotlex]
	* Modified emergency_call setting to allow for more specific configuration
	  (woe/non-woe, gvg-grounds/non-gvg-grounds, disable from nowarpto maps), see
	  skill.conf for details. [Skotlex]
2006/08/10
	* Removed setting mob_ghostring_fix [Skotlex]
	* Changed setting attack_attr_none to affect all neutral-element attacks.
	  Basicly, this setting is now used to determine who can hit for full damage
	  always when using neutral-attacks (defaults to non-players) [Skotlex]
2006/08/09
	* Change the default of attack_attr_none to all classes except players.
	  This means that pet/mobs/homun will always do normal attacks with
	  no-element modifiers (but elemental reduction cards still apply) [Skotlex]
2006/08/08
	* Removed config settings display_delay_skill_fail and
	  display_snatcher_skill_fail, replaced them with display_skill_fail, which
	  can be used to determine whether you hide ALL skill-failed messages, those
	  from delay, those from Snatcher or those from Envenom (battle/skill.conf)
	  [Skotlex]
2006/08/07
	* Added config force_random_spawn which overrides the spawn-files defined
	  coordinates to make all mobs always spawn randomly on the map. [Skotlex]
	* SC_SPEEDUP0 is no longer dispellable by SA_DISPEL [Skotlex]
2006/08/04
	* Removed settings enemy_critical_rate, homun_critical_rate. Added settings
	  enable_critical (defaults to specify only players), mob_critical_rate and
	  critical_rate. The last applies to all non-mobs and non-players
	  (battle/battle.conf) [Skotlex]